Added capacity feature

--- a/assets/styles/_combined-styles.css
+++ b/assets/styles/_combined-styles.css
@@ -24,6 +24,7 @@
 @import url("components/slideshow.css");
 @import url("components/video.css");
 @import url("components/form.css");
+@import url("components/state-of-work.css");
 
 /* Layouts 
 ############################################################################ */
