--- a/assets/styles/components/herotext.css
+++ b/assets/styles/components/herotext.css
@@ -1,6 +1,7 @@
 /* Herotext
 ############################################################################ */
 .herotext {
+  margin-bottom: var(--size-xxl );
   font-size: var(--size-m);
   font-weight: var(--fw-normal);
   line-height: var(--lh-default);
