--- a/assets/styles/components/state-of-work.css
+++ b/assets/styles/components/state-of-work.css
@@ -1,7 +1,7 @@
 /* State of Work
 ############################################################################ */
 .state-of-work {
-  margin-top: var(--size-xl);
+  margin-top: var(--size-xxl);
   margin-bottom: var(--size-xxl);
 
 
