--- a/_includes/fields-of-interest.html
+++ b/_includes/fields-of-interest.html
@@ -1,4 +1,4 @@
-{% assign topics = site.research-questions | where: "status", "proposal" | sort: 'datum'  %}
+{% assign topics = site.research-questions | where: "status", "proposal" %}
 
 
 <ul class="topic-overview is-full-width">
